Fixed website decoration Added background image Added box model Content aligned to center

--- a/main.css
+++ b/main.css
@@ -2,8 +2,25 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
-ul{
-    font-family: Arial, Helvetica, sans-serif;
+header{
+    position: relative;
+    text-align: center;
+    background-color: snow;
+    margin: auto;
+    border-radius: 5px 15px;
+    box-shadow: 3px 3px orange;
+}
+
+main{
+    text-align: justify;
+    margin: auto;
+}
+
+section{
+    text-align: center;
+    align-self: center;
+    vertical-align: middle;
+    margin: auto;
 }
 
 li{
@@ -27,12 +44,16 @@ li{
 }
 
 body{
-    background: var(--bg);
+    background-image: url(images/bookshelfs.jpg);
+    background-position: top;
+    background-size: auto;
     color: var(--fontColor);
 }
 
 .btn{
-    position: absolute;
+    position: relative;
+    align-content: center;
+    margin: auto;
     top: 20px;
     left: 250px;
     height: 50px;
